pod-security/baseline/disallow-host-namespaces/.kyverno-test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-host-namespaces
policies:
  - ../disallow-host-namespaces.yaml
resources:
  - resource.yaml
results:
  - kind: CronJob
    policy: disallow-host-namespaces
    resources:
      - badcronjob01
      - badcronjob02
      - badcronjob03
      - badcronjob04
    result: fail
    rule: host-namespaces
  - kind: Deployment
    policy: disallow-host-namespaces
    resources:
      - baddeployment01
      - baddeployment02
      - baddeployment03
      - baddeployment04
    result: fail
    rule: host-namespaces
  - kind: Pod
    policy: disallow-host-namespaces
    resources:
      - badpod01
      - badpod02
      - badpod03
      - badpod04
    result: fail
    rule: host-namespaces
  - kind: CronJob
    policy: disallow-host-namespaces
    resources:
      - goodcronjob01
      - goodcronjob02
      - goodcronjob03
      - goodcronjob04
      - goodcronjob05
    result: pass
    rule: host-namespaces
  - kind: Deployment
    policy: disallow-host-namespaces
    resources:
      - gooddeployment01
      - gooddeployment02
      - gooddeployment03
      - gooddeployment04
      - gooddeployment05
    result: pass
    rule: host-namespaces
  - kind: Pod
    policy: disallow-host-namespaces
    resources:
      - goodpod01
      - goodpod02
      - goodpod03
      - goodpod04
      - goodpod05
    result: pass
    rule: host-namespaces
